--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -7,17 +7,14 @@
         <header>
             <h1>Welcome</h1>
         </header>
-        
-        <article>
-            <time>Published: 12.07.2021, 16:05</time>
-            <h2>This is my first blog post. I hope you like it</h2>
-            <p>This section is an article.</p>
-        </article>
-        <hr>
-        <article>
-            <time>Published: 12.07.2021, 16:09</time>
-            <h2>This is my second blog post.</h2>
-            <p>This is a second article.</p>
-        </article>
+
+        {% for post in posts %}
+            <article>
+                <time>Published: {{ post.published_date }}</time>
+                <h2>{{ post.title }}</h2>
+                <p>{{ post.text|linebreaksbr }}</p>
+            </article>    
+        {% endfor %}
+
     </body>
 </html>
