--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,20 +1,13 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Elena's blog</title>
-    </head>
-    <body>
-        <header>
-            <h1>Welcome</h1>
-        </header>
+{% extends 'blog/base.html' %}
 
-        {% for post in posts %}
-            <article>
-                <time>Published: {{ post.published_date }}</time>
-                <h2>{{ post.title }}</h2>
-                <p>{{ post.text|linebreaksbr }}</p>
-            </article>    
-        {% endfor %}
-
-    </body>
-</html>
+{% block content %}
+    {% for post in posts %}
+        <article class="post">
+            <time class="date">
+                {{ post.published_date }}
+            </time>
+            <h2><a href="">{{ post.title }}</a></h2>
+            <p>{{ post.text|linebreaksbr }}</p>
+        </article>
+    {% endfor %}
+{% endblock %}
